--- a/game_invitation.html
+++ b/game_invitation.html
@@ -161,8 +161,8 @@
         <div class="container-fluid bg-white br_47px-s">
             <div class="row pt-5 px-xl-5">
                 <div class="col-12 d-flex fg_green-s">
-                    <h6 class="mb-0 fs_18px-s">Today,</h6>
-                    <h6 class="mb-0 fs_18px-s"> 26 December 2020</h6>
+                    <span> <h6 class="mb-0 fs_18px-s"> Today, </h6> </span>
+                    <span> <h6 class="mb-0 fs_18px-s ml-2">26 December 2020</h6> </span>
                     <a href="javascript:void(0)" class="td_none-s d-flex align-self-center mx-2" data-toggle="modal" data-target="#slected_date_calander_modal-d"><img src="assets/images/arrow_green.svg" class="img-fluid" width="10" alt="arrow button"></a>
                 </div>
             </div>
@@ -173,7 +173,7 @@
 
                     </div>
                     <div class="pl-2">
-                        <h6 class="fs_18px-s">03:00 pm</h6>
+                        <h6 class="fs_18px-s"><strong>03:00 pm</strong></h6>
                     </div>
                 </div>
                 <div class="col-md-6 col-7 pr-md-3 pr-0  text-right">
@@ -394,7 +394,7 @@
 
                     </div>
                     <div class="pl-2">
-                        <h6 class="fs_18px-s">09:15 am</h6>
+                        <h6 class="fs_18px-s"><strong>09:15 am</strong></h6>
                     </div>
                 </div>
                 <div class="col-md-6 col-7 pr-md-3 pr-0  text-right">
@@ -460,7 +460,7 @@
 
                             <div class="row pt-3 pb-2 px-4">
                                 <div class="col-6 pr-2">
-                                    <button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button>
+                                    <a href="rating_player.html"><button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button></a>
                                 </div>
 
                                 <!--SUBMIT button-->
