--- a/hire_Players.html
+++ b/hire_Players.html
@@ -156,7 +156,7 @@
             <div class="row pt-5 px-xl-5">
                 <div class="col-12 d-flex fg_green-s">
                     <h6 class="mb-0 fs_18px-s">Today,</h6>
-                    <h6 class="mb-0 fs_18px-s">26 December 2020</h6>
+                    <h6 class="mb-0 fs_18px-s ml-2">26 December 2020</h6>
                     <a href="javascript:void(0)" class="td_none-s d-flex align-self-center mx-2"><img src="assets/images/arrow_green.svg" class="img-fluid" width="10" alt="arrow button"></a>
                 </div>
             </div>
@@ -167,7 +167,7 @@
 
                     </div>
                     <div class="pl-2">
-                        <h6 class="fs_18px-s">03:00 pm</h6>
+                        <h6 class="fs_18px-s"> <strong>03:00 pm</strong> </h6>
                     </div>
                 </div>
                 <div class="col-md-6 col-7 pr-md-3 pr-0  text-right">
@@ -199,11 +199,11 @@
                                                     <h6 class="mb-0">Thamer</h6>
                                                     <span class=" opacity_4-s fs_11px">@thamermd</span>
                                                     <p class="fg_yellow-s fs_11px-s">
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i> 5.0
                                                     </p>
                                                 </div>
                                             </div>
@@ -262,11 +262,11 @@
                                                     <h6 class="mb-0">Thamer</h6>
                                                     <span class=" opacity_4-s fs_11px">@thamermd</span>
                                                     <p class="fg_yellow-s fs_11px-s">
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i> 5.0
                                                     </p>
                                                 </div>
                                             </div>
@@ -325,11 +325,11 @@
                                                     <h6 class="mb-0">Thamer</h6>
                                                     <span class=" opacity_4-s fs_11px">@thamermd</span>
                                                     <p class="fg_yellow-s fs_11px-s">
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i> 5.0
                                                     </p>
                                                 </div>
                                             </div>
@@ -373,7 +373,7 @@
 
                     </div>
                     <div class="pl-2">
-                        <h6 class="fs_18px-s">09:15 am</h6>
+                        <h6 class="fs_18px-s"> <strong>09:15 am</strong> </h6>
                     </div>
                 </div>
                 <div class="col-md-6 col-7 pr-md-3 pr-0  text-right">
@@ -406,11 +406,11 @@
                                                     <h6 class="mb-0">Thamer</h6>
                                                     <span class=" opacity_4-s fs_11px">@thamermd</span>
                                                     <p class="fg_yellow-s fs_11px-s">
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                        <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star" aria-hidden="true"></i> 5.0
                                                     </p>
                                                 </div>
                                             </div>
@@ -444,7 +444,7 @@
 
                                 <!--SUBMIT button-->
                                 <div class="col-6 pl-2">
-                                    <button type="submit" class="btn fs_11px-s bg-white br_10px-s py-3 fg_green-s w-100"><strong>Message</strong></button>
+                                    <a href="chat.html" role="button" type="submit" class="btn fs_11px-s bg-white br_10px-s py-3 fg_green-s w-100"><strong>Message</strong></a>
                                 </div>
                             </div>
                         </div>
