--- a/user_profile.html
+++ b/user_profile.html
@@ -222,22 +222,27 @@
             </div>
 
             <div class="container-fluid">
-                <div class="nav-tabs d-flex performance_text pt-5 mb-5">
-                    <p class="active position-relative">
-                        <a data-toggle="tab" href="#home">performance
-                            <span class="performance_span"></span>
-                        </a>
-                    </p>
-                    <p><a data-toggle="tab" href="#menu2">photo</a></p>
-                    <p><a data-toggle="tab" href="#menu3">videos</a></p>
-                </div>
+                <nav>
+                    <div class="nav-tabs d-flex pt-5 mb-5 text-dark opacity_4-s">
+                        <span class="m-1">
+                            <a class="p_tab performance_text pb-2 td_none-s text-dark" data-toggle="tab" href="#home" role="tab" aria-selected="true">performance</a>
+                        </span>
+                        <span class="m-1">
+                            <a class="p_tab pb-2 td_none-s text-dark" data-toggle="tab" href="#menu2" role="tab" aria-selected="false">photo</a>
+                        </span>
+                        <span class="m-1">
+                            <a class="p_tab pb-2 td_none-s text-dark" data-toggle="tab" href="#menu3" role="tab" aria-selected="false">videos</a>
+                        </span>
+                    </div>
+                </nav>
 
                 <div class="tab-content">
-                    <div id="home" class="tab-pane fade in">
+                    <div id="home" class="tab-pane fade active show">
                         <div class="text-center performance_img">
                             <img src="assets/images/graph.svg" class="img-fluid" alt="" />
                         </div>
                     </div>
+
                     <div id="menu2" class="tab-pane fade">
                         <div class="row home-img-blocks">
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block">
@@ -258,9 +263,7 @@
 
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
-                                <p>lourem ipsu, set duit dedmemm klmmlk hihh awujd kkos</p>
-                            </div>
+
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                                 <div class="hover">
@@ -335,21 +338,27 @@
                             </div>
                         </div>
                     </div>
+
                     <div id="menu3" class="tab-pane fade">
                         <div class="row">
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+                                <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                             </div>
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+                                <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                             </div>
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+                                <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                             </div>
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+                                <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                             </div>
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+                                <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                             </div>
                         </div>
