--- a/rating_player.html
+++ b/rating_player.html
@@ -245,8 +245,8 @@
                                         </div>
                                     </div>
                                     <!--pace rating end-->
-                                    <div class="col-md-6 col-12 mt-2">
-                                        <button type="submit" class="br_10px-s bg_green-s  text-white w-100 h_79px-s fs_20px-s border-0" data-toggle="modal" data-target="#player_played_modal-d"><strong>SUBMIT</strong></button>
+                                    <div class="col-md-6 col-12 mt-2 align-self-center">
+                                        <button type="submit" class="br_10px-s bg_green-s  text-white w-100 h_58px-s fs_20px-s border-0" data-toggle="modal" data-target="#player_played_modal-d"><strong>SUBMIT</strong></button>
                                     </div>
                                 </div>
                             </form>
