--- a/game_invitation.html
+++ b/game_invitation.html
@@ -48,29 +48,29 @@
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
                                 <li class="nav-item ml-lg-0 ml-2">
                                     <a class="nav-link pl-lg-0" href="index.html">
-                                        <span><img src="assets/images/home_icon.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
+                                        <span><img src="assets/images/white_home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="chat.html">
-                                        <span><img src="assets/images/chat_icon.svg" class="img-fluid" alt="navbar_chat" /></span> Chat
+                                        <span><img src="assets/images/white_chat.svg" class="img-fluid" alt="navbar_chat" /></span> Chat
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="favorite_player.html">
-                                        <span><img src="assets/images/favrticon.svg" class="img-fluid" alt="navbar_fvrt" /> </span> Favorites
+                                        <span><img src="assets/images/white_favt.svg" class="img-fluid" alt="navbar_fvrt" /> </span> Favorites
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="game_invitation.html">
-                                        <span> <img src="assets/images/GameInvitation.svg" class="img-fluid" alt="navbar_home" /> </span> Game Invitations
+                                        <span> <img src="assets/images/white_invitation.svg" class="img-fluid" alt="navbar_home" /> </span> Game Invitations
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="more.html">
-                                        <span> <img src="assets/images/moreoption.svg" class="img-fluid" alt="navbar_home" /> </span> More
+                                        <span> <img src="assets/images/white_more.svg" class="img-fluid" alt="navbar_home" /> </span> More
                                     </a>
                                 </li>
                             </ul>
@@ -473,12 +473,7 @@
 
                             <div class="row pt-3 pb-2 px-4">
                                 <div class="col-6 pr-2">
-                                    <<<<<<< HEAD <a href="rating_player.html"><button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button></a>
-                                        =======
-                                        <a href="rating_player.html">
-                                            <button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button>
-                                        </a>
-                                        >>>>>>> 1c2432ae0f88e91722312d64ca4d5d30ede3de1a
+                                    <a href="rating_player.html"><button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button></a>
                                 </div>
 
                                 <!--SUBMIT button-->
@@ -763,7 +758,7 @@
           startOnMonday: true,
         };
 
-        var calendar = $('#calendar-wrapper').calendar(defaultConfig);
+        var calendar = $('.calendar-wrapper').calendar(defaultConfig);
         console.log(calendar.getSelectedDate());
 `;
         eval(config);
