--- a/hire_Players.html
+++ b/hire_Players.html
@@ -76,11 +76,11 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
-                            <a class="pr-3 td_none-s" href="user_profile.html">
-                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                                <span class="text-dark"> <strong>Adailiya </strong> </span>
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
+                            <span class="text-dark"> <strong>Adailiya </strong> </span>
+                            <a class="pl-3 td_none-s" href="user_profile.html">
+                                <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
                             </a>
-                            <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
 
                             <!-- notification drop down -->
                             <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
@@ -249,7 +249,7 @@
 
                             <div class="row pt-3 pb-2 px-4">
                                 <div class="col-12 ">
-                                    <button type="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></button>
+                                    <a href="chat.html" type="button" role="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></a>
                                 </div>
                             </div>
                         </div>
@@ -312,7 +312,7 @@
 
                             <div class="row pt-3 pb-2 px-4">
                                 <div class="col-12 ">
-                                    <button type="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></button>
+                                    <a href="chat.html" type="submit" role="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></a>
                                 </div>
                             </div>
                         </div>
@@ -375,7 +375,7 @@
 
                             <div class="row pt-3 pb-2 px-4 invisible">
                                 <div class="col-12 ">
-                                    <button type="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></button>
+                                    <a href="chat.html" type="submit" role="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></a>
                                 </div>
                             </div>
                         </div>
