--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
-                            <a class="pr-3 td_none-s" href="user_profile.html">
-                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                                <span class="text-dark"> <strong>Adailiya </strong> </span>
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
+                            <span class="text-dark"> <strong>Adailiya </strong> </span>
+                            <a class="pl-3 td_none-s" href="user_profile.html">
+                                <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
                             </a>
-                            <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
 
                             <!-- notification drop down -->
                             <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
@@ -181,7 +181,7 @@
         <!-- .................Home Page Button Group Section End ......................... -->
 
         <div class="btn_grp pt-5 d-md-flex justify-content-between pb-0 mx-5 mb_25px-s">
-            <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s active_position-s w_100_on_sm-s"><span class="opacity_4-s child">All positions</span> </button>
+            <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s active_position-s w_100_on_sm-s"><span class="child">All positions</span> </button>
             <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s"><span class="opacity_4-s child">Goalkeeper</span></button>
             <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s"><span class="opacity_4-s child">Defender</span></button>
             <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s"><span class="opacity_4-s child">Midfielder</span></button>
