--- a/game_invitation.html
+++ b/game_invitation.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' />
 
-    <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/mina.css">
     <!-- <link rel="stylesheet" href="assets/css/page.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/main.css" />
 
 
 
@@ -78,11 +78,11 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
-                            <a class="pr-3 td_none-s" href="user_profile.html">
-                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                                <span class="text-dark"> <strong>Adailiya </strong> </span>
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
+                            <span class="text-dark"> <strong>Adailiya </strong> </span>
+                            <a class="pl-3 td_none-s" href="user_profile.html">
+                                <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
                             </a>
-                            <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
 
                             <!-- notification drop down -->
                             <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
@@ -473,12 +473,9 @@
 
                             <div class="row pt-3 pb-2 px-4">
                                 <div class="col-6 pr-2">
-                                    <<<<<<< HEAD <a href="rating_player.html"><button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button></a>
-                                        =======
-                                        <a href="rating_player.html">
-                                            <button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button>
-                                        </a>
-                                        >>>>>>> 1c2432ae0f88e91722312d64ca4d5d30ede3de1a
+                                    <a href="rating_player.html">
+                                        <button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button>
+                                    </a>
                                 </div>
 
                                 <!--SUBMIT button-->
@@ -717,13 +714,13 @@
                     <div class="row px-3  pb-5">
                         <!--CANCEL button-->
                         <div class="col-6 pr-2">
-                            <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100" data-dismiss="modal"><strong>CANCEL</strong></button>
+                            <a role="button" type="submit" id="cancel_modal-d" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100" data-dismiss="modal"><strong>CANCEL</strong></a>
                         </div>
                         <!--CANCEL button end-->
 
                         <!--SUBMIT button-->
                         <div class="col-6 pl-2">
-                            <a role="button" type="submit" id="cal" class="btn bg_green-s br_10px-s py-3 text-white w-100" data-dismiss="modal"><strong>SUBMIT</strong></a>
+                            <a role="button" type="submit" id="cal" class="btn bg_green-s br_10px-s py-3 text-white w-100"><strong>SUBMIT</strong></a>
                         </div>
                         <!--SUBMIT button end-->
                     </div>
@@ -743,7 +740,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js "></script>
     <script src="assets/js/calendar.js"></script>
     <script src="assets/js/calendar.min.js"></script>
-    <script src="https://unpkg.com/codeflask/build/codeflask.min.js"></script>
+    <!-- <script src="https://unpkg.com/codeflask/build/codeflask.min.js"></script> -->
+    <script src="assets/js/common.js"></script>
     <script src="assets/js/main.js"></script>
     <!-- <script src="assets/js/main.js"></script> -->
     <script type="text/javascript">
