--- a/more.html
+++ b/more.html
@@ -64,11 +64,11 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
-                            <a class="pr-3 td_none-s" href="user_profile.html">
-                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                                <span class="text-dark"> <strong>Adailiya </strong> </span>
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
+                            <span class="text-dark"> <strong>Adailiya </strong> </span>
+                            <a class="pl-3 td_none-s" href="user_profile.html">
+                                <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
                             </a>
-                            <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
 
                             <!-- notification drop down -->
                             <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
