--- a/term_and_condition.html
+++ b/term_and_condition.html
@@ -33,11 +33,11 @@
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-right order-md-2 order-1">
                 <div class="">
-                    <a class="pr-3">
-                        <img src="assets/images/Location.svg" class="img-fluid nav_location_img " alt="navbar_home" />
-                        <span class="text-dark"> <strong>Adailiya </strong></span>
+                    <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
+                    <span class="text-dark"> <strong>Adailiya </strong> </span>
+                    <a class="pl-3 td_none-s" href="user_profile.html">
+                        <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
                     </a>
-                    <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
                     <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                 </div>
             </div>
