--- a/filter_by_rating.html
+++ b/filter_by_rating.html
@@ -32,9 +32,17 @@
                     <form action="">
                         <div class="row pt-3 pb-5">
                             <div class="col-12">
-                                <div class="price-field ">
-                                    <input type="range"  min="100" max="500" value="100" name="foo" id="lower">
+
+                                <!-- <div class="rating_value-s" >
+                                    
+                                    <br>
+                                </div>
+                                <span class="float-right" id="rating_value-d2">3.5</span> -->
+                                <div class="price-field" id="rating_slider-d">
+                                    <input type="range" class="lower_value-s" min="100" max="500" value="120" id="lower">
+                                    <span class="float-left rating_value-s" id="rating_value-d">3.5</span>
                                     <input type="range" min="100" max="500" value="500" id="upper">
+                                    <!-- <span class="float-left " id="rating_value-d">3.5</span> -->
                                 </div>
                             </div>
                         </div>
@@ -61,7 +69,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js "></script>
 
     <!-- ajax -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js "></script>
+    <script src="assets/js/main.js"></script>
+</body>
 </body>
 </html>
