--- a/hire_Players.html
+++ b/hire_Players.html
@@ -249,7 +249,8 @@
 
                             <div class="row pt-3 pb-2 px-4">
                                 <div class="col-12 ">
-                                    <button type="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></button>
+                                    <a href="chat.html" role="button" type="submit" class="btn fs_11px-s bg-white br_10px-s py-3 fg_green-s w-100"><strong>Message</strong></a>
+
                                 </div>
                             </div>
                         </div>
@@ -312,7 +313,7 @@
 
                             <div class="row pt-3 pb-2 px-4">
                                 <div class="col-12 ">
-                                    <button type="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></button>
+                                    <a href="chat.html" role="button" type="submit" class="btn fs_11px-s bg-white br_10px-s py-3 fg_green-s w-100"><strong>Message</strong></a>
                                 </div>
                             </div>
                         </div>
@@ -375,7 +376,7 @@
 
                             <div class="row pt-3 pb-2 px-4 invisible">
                                 <div class="col-12 ">
-                                    <button type="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></button>
+                                    <a href="chat.html" role="button" type="submit" class="btn fs_11px-s bg-white br_10px-s py-3 fg_green-s w-100"><strong>Message</strong></a>
                                 </div>
                             </div>
                         </div>
