--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <link rel="stylesheet" href="assets/css/main.css" />
 
     <title>index.html</title>
-    <style></style>
+    <style>
+        .dropdown-item.active {
+            background-color: none !important;
+        }
+    </style>
 </head>
 
 <body class="bg_img-s font_family_roboto-s">
