--- a/more.html
+++ b/more.html
@@ -349,8 +349,8 @@
                     <div class="row modal-body justify-content-center pt-3 pb-0">
                         <div class="col-12">
                             <div class="col-12 text-center">
-                                <h4 class="fg_green-s">EMAIL VERIFICATION</h4>
-                                <h6>Please enter the 4 digit code sent to <span>ahmadmd.23@gmail.com</span></h6>
+                                <h4 class="fg_green-s">VERIFICATION</h4>
+                                <h6>Please enter the 4 digit verification code sent to <span>93********94</span></h6>
                             </div>
                         </div>
                     </div>
@@ -359,16 +359,16 @@
                         <div class="col-12 px-4">
                             <form action="">
                                 <div class="d-flex text-center py-4 justify-content-between">
-                                    <div class=" p-4 code_border-s">
+                                    <div class=" p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class="  p-4 code_border-s">
+                                    <div class="  p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-4 code_border-s">
+                                    <div class=" p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-4 code_border-s">
+                                    <div class=" p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
                                 </div>
@@ -572,16 +572,16 @@
                         <div class="col-12 px-4">
                             <form action="">
                                 <div class="d-flex text-center py-4 justify-content-between">
-                                    <div class=" p-4 code_border-s">
+                                    <div class=" p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class="  p-4 code_border-s">
+                                    <div class="  p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-4 code_border-s">
+                                    <div class=" p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-4 code_border-s">
+                                    <div class=" p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
                                 </div>
@@ -773,8 +773,8 @@
                     <div class="row modal-body justify-content-center pt-3 pb-0">
                         <div class="col-12">
                             <div class="col-12 text-center">
-                                <h4 class="fg_green-s">EMAIL VERIFICATION</h4>
-                                <h5>Please enter the 4 digit code sent to <span>ahmadmd.23@gmail.com</span></h5>
+                                <h4 class="fg_green-s">VERIFICATION</h4>
+                                <h5>Please enter the 4 digit verification code sent to <span>ahmadmd.23@gmail.com</span></h5>
                             </div>
                         </div>
                     </div>
@@ -783,16 +783,16 @@
                         <div class="col-12 px-4">
                             <form action="">
                                 <div class="d-flex text-center py-4 justify-content-between">
-                                    <div class=" p-4 code_border-s">
+                                    <div class=" p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class="  p-4 code_border-s">
+                                    <div class="  p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-4 code_border-s">
+                                    <div class=" p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
-                                    <div class=" p-4 code_border-s">
+                                    <div class=" p-3 code_border-s">
                                         <span class="fs_30px-s"><strong>4</strong></span>
                                     </div>
                                 </div>
