--- a/term_and_condition.html
+++ b/term_and_condition.html
@@ -80,7 +80,7 @@
                 <div class="col-lg-6 col-12 align-self-center">
                     <div class="form-check fs_18px-s">
                         <input type="checkbox" class="form-check-input h_21px-s" id="term_and_condition-d">
-                        <label class="form-check-label ml-3" for="term_and_condition-d"><strong>I have read and accept the term and conditions.</strong></label>
+                        <label class="form-check-label mt-1" for="term_and_condition-d"><strong>I have read and accept the term and conditions.</strong></label>
                     </div>
                 </div>
                 <div class="col-lg-6 col-12 d-flex justify-content-md-end pt-lg-0 pt-3">
