--- a/home-sent-invitation.html
+++ b/home-sent-invitation.html
@@ -59,8 +59,8 @@
             <!-- .................Home Page Sent Invitation Page NavBar End ......................... -->
             <!-- .................Home Page Sent Invitation Section One Start ......................... -->
             <div class="container-fluid bg-white br_47px-s mh_86vh-s">
-                <div class="row pt-5 px-xl-5 px-3 ">
-                    <div class="col-xl-4 col-lg-6 col-md-6 col-12 h_674px-s border br_15px-s border_grey-s">
+                <div class="row pt-3 px-xl-5 px-3 ">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-12 h_674px-s border br_15px-s border_grey-s mt-3">
                         <div class="container">
                             <div class="row pt-4">
                                 <div class="col-12">
@@ -266,7 +266,7 @@
                             </div>
                         </div> -->
                     </div>
-                    <div class="col-xl-4 col-lg-6 col-md-6 col-12 mb-3">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-12 mt-3">
                         <div class="container">
                             <div class="row">
                                 <div class=" col-12 celender_bg">
@@ -278,8 +278,8 @@
                                     <div class="d-flex justify-content-between pt-4">
                                         <span class="fs_14px-s"><strong>Select Time</strong></span>
                                         <div>
-                                            <span class="badge bg-success fs_12px-s rounded-pill px-4">PM</span>
-                                            <span class="badge bg-successs fs_12px-s rounded-pill px-4">AM</span>
+                                            <span class="text-white bg_green-s fs_12px-s py-2 rounded-pill px-4">PM</span>
+                                            <span class=" fg_green-s bg_grey-s fs_12px-s py-2 rounded-pill px-4">AM</span>
                                         </div>
                                     </div>
                                     <div class="row pt-5 pb-3 ">
@@ -305,7 +305,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-6 col-md-7 col-12">
+                    <div class="col-xl-4 col-lg-6 col-md-7 col-12 mt-3">
                         <div class="container invitation_location-s d-flex ">
                             <div class=" location_card-s d-flex align-self-end pb-3 w-100">
                                 <div class="card w-100 br_10px-s">
@@ -314,7 +314,7 @@
                                             <div class="col-4">
                                                 <img src="assets/images/Mask Group 3.svg" class="stadium_img mt-1" alt="" />
                                             </div>
-                                            <div class="col-8 pl-xl-4 my-3">
+                                            <div class="col-8 pl-xl-4 pl-3 my-3">
                                                 <span class="fs_12px-s fg_green-s">Jaber Al-Ahmad INternational Stadium</span>
                                                 <div class="fs_9px-s pt-1">
                                                     <img src="assets/images/Location.svg" class="img-fluid" alt="">
