--- a/about_us_login.html
+++ b/about_us_login.html
@@ -25,20 +25,77 @@
         <div class="container-fluid px-xl-5 px-3">
             <div class="row pt-4 pb-3">
                 <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex order-md-2 order-2">
-                    <a class="td_none-s" href="more.html">
+                    <a class="td_none-s" href="football_login1.html">
                         <h4 class="pr-2 text-dark">Home</h4>
                     </a>
                     <h4 class="px-2"><strong>/</strong></h4>
                     <h4 class="fg_green-s pl-2">About Us</h4>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-right order-md-2 order-1">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right order-md-2 order-1">
                     <div class="">
                         <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
                         <span class="text-dark"> <strong>Adailiya </strong> </span>
                         <a class="pl-3 td_none-s" href="user_profile.html">
                             <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
                         </a>
-                        <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
+
+                        <!-- notification drop down -->
+                        <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
+                            <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
+                        </a>
+                        <div class="col-4 dropdown-menu mt_68px-s bg_lightgrey-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
+                            <h4 class="ml-5 mt-3 mb-5">
+                                <strong class="fg_green-s">Notification</strong>
+                            </h4>
+
+                            <h5 class="ml-5">
+                                <strong>Today</strong>
+                            </h5>
+                            <a class="dropdown-item bg-white py-4" href="#">
+                                <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                    <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    <strong class="fg_green-s ml-2">Themer</strong> <span> invite you to join the game.</span>
+                                    </br><span class="ml-5">1m ago</span>
+                                </div>
+                            </a>
+
+                            <hr class="goalkeeper_margin_b mx-1 mt-0 mb-0" />
+
+                            <a class="dropdown-item bg-white py-4" href="#">
+                                <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                    <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    <strong class="fg_green-s ml-2">Themer</strong> <span> accepted your invitation.</span>
+                                    </br><span class="ml-5">1m ago</span>
+                                </div>
+                            </a>
+                            <a class="dropdown-item py-4" href="#">
+                                <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                    <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    <strong class="fg_green-s ml-2">Themer</strong> <span> sent you a message.</span>
+                                    </br><span class="ml-5">2m ago</span>
+                                </div>
+                            </a>
+                            <h5 class="ml-5">
+                                <strong>Yesterday</strong>
+                            </h5>
+                            <a class="dropdown-item py-4" href="#">
+                                <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                    <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    <strong class="fg_green-s ml-2">Themer</strong> <span> sent you a message.</span>
+                                    </br><span class="ml-5">6:00 pm</span>
+                                </div>
+                            </a>
+
+                            <div class="dropdown-divider"></div>
+
+                            <a class="dropdown-item py-4" href="#">
+                                <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                    <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    <strong class="fg_green-s ml-2">Themer</strong> <span> invite you to join the game.</span>
+                                    </br><span class="ml-5">2:00 pm</span>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
