--- a/favorite_player.html
+++ b/favorite_player.html
@@ -276,7 +276,7 @@
                                             </p>
                                         </div>
                                         <div class="col-6 pl-0">
-                                            <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
+                                            <a class="td_none-s text-white fs_12px-s" href="home-sent-invitation.html">
                                                 <span class="pull-right text-white"> send invitation >> </span>
                                             </a>
                                         </div>
