--- a/hire_Players.html
+++ b/hire_Players.html
@@ -51,7 +51,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="chat.html">
-                                        <span><img src="assets/images/chat.svg" class="img-fluid" alt="navbar_chat" /></span> Chat
+                                        <span><img src="assets/images/chat_icon.svg" class="img-fluid" alt="navbar_chat" /></span> Chat
                                     </a>
                                 </li>
 
